# crypto-exchange

./: .env.example  .gitignore  Cargo.toml
src/: cache.rs  config.rs  errors.rs  logger.rs  main.rs  server.rs
src/auth/: jwt.rs  middleware.rs
src/controller/: admin_controller.rs  mod.rs  order_controller.rs  user_controller.rs
src/feed/: listener.rs  mod.rs  session_manager.rs
src/market/: mod.rs  persistence.rs
src/matching/: account_book.rs  command.rs  command_producer.rs  engine.rs  enums.rs  message.rs  message_sender.rs  mod.rs  order.rs  order_book.rs  product_book.rs
src/repository/: account_repository.rs  mod.rs  order_repository.rs  product_repository.rs  trade_repository.rs  user_repository.rs
src/snapshot/: consumer.rs  manager.rs  mod.rs
