[package]
name = "crypto-exchange"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros", "ws"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
chrono = { version = "0.4.44", features = ["serde"] }
dashmap = "6.1.0"
dotenvy = "0.15.7"
futures-util = "0.3.32"
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }
mongodb = "3.5.2"
rdkafka = { version = "0.39.0", features = ["cmake-build", "zstd"] }
redis = { version = "1.2.0", features = ["tokio-comp"] }
rust_decimal = "1.41.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }
tower-http = { version = "0.6.8", features = ["auth"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
uuid = { version = "1.23.1", features = ["v4"] }
xid = "1.1.1"
